stores search itema and search type in const

--- a/day_1/index.html
+++ b/day_1/index.html
@@ -13,8 +13,8 @@
         </header>
         <form class="search-bar">
             <input type="text" id="search">
-            <input type="submit" id="name" value="Name">
-            <input type="submit" id="type" value="Type">
+            <input type="submit" id="name" value="name">
+            <input type="submit" id="type" value="type">
         </form>
 
         <div class="search-results">
