--- a/day_1/index.html
+++ b/day_1/index.html
@@ -13,7 +13,7 @@
         </header>
         <form class="search-bar">
             <input type="text" id="search">
-            <input type="submit" id="name" value="pokemon">
+            <input type="submit" id="name" value="name">
             <input type="submit" id="type" value="type">
         </form>
         <!-- revisit w03d02 DOM INPUT to see if this form can be better -->
