--- a/day_1/index.html
+++ b/day_1/index.html
@@ -2,14 +2,14 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <title>ajax testing</title>
+        <title>BUILD YOUR POKEMON TEAM</title>
         <script src="https://code.jquery.com/jquery-3.5.1.min.js" charset="utf-8"></script>
         <script src="app.js" charset="utf-8"></script>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header>
-            <h1>BUILD YOUR POKEMON TEAM</h1>
+            <h1>BUILD YOUR <img src="pokemon-logo-png-0.png" alt="pokemon logo"> TEAM</h1>
         </header>
         <form class="search-bar">
             <input type="text" id="search">
@@ -17,13 +17,11 @@
             <input type="submit" id="type" value="type">
         </form>
         <!-- revisit w03d02 DOM INPUT to see if this form can be better -->
+        <h2>SEARCH RESULTS</h2>
+        <div class="search-results"></div>
 
-        <div class="search-results">
-            <h2>SEARCH RESULTS</h2>
-        </div>
+        <h2>MY TEAM</h2>
+        <div class="myTeam"></div>
 
-        <div class="myTeam">
-            <h2>MY TEAM</h2>
-        </div>
     </body>
 </html>
