--- a/day_1/index.html
+++ b/day_1/index.html
@@ -12,16 +12,22 @@
             <h1>BUILD YOUR <img src="pokemon-logo-png-0.png" alt="pokemon logo"> TEAM</h1>
         </header>
         <form class="search-bar">
-            <input type="text" id="search">
+            <input type="text" id="search" placeholder="enter a name or type">
             <input type="submit" id="name" value="name">
             <input type="submit" id="type" value="type">
         </form>
         <!-- revisit w03d02 DOM INPUT to see if this form can be better -->
-        <h2>SEARCH RESULTS</h2>
-        <div class="search-results"></div>
 
-        <h2>MY TEAM</h2>
-        <div class="myTeam"></div>
+        <div class="search-results">
+            <h2>SEARCH RESULTS</h2>
+        </div>
+
+        <div class="team-div"> <!-- carousel -->
+            <h2>MY TEAM</h2>
+            <div class="previous-button"></div>
+            <div class="myTeam"><!-- cards of pokemon in team --></div>
+            <div class="next-button"></div>
+        </div>
 
     </body>
 </html>
