--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <title>BUILD YOUR POKEMON TEAM</title>
+        <title>2.0</title>
         <script src="https://code.jquery.com/jquery-3.5.1.min.js" charset="utf-8"></script>
         <script src="app.js" charset="utf-8"></script>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header>
-            <h1>BUILD YOUR <img src="pokemon-logo-png-0.png" alt="pokemon logo"> TEAM</h1>
+            <h1>BUILD YOUR pokemon TEAM</h1>
         </header>
         <form class="search-bar">
             <input type="text" id="search" placeholder="enter a name or type">
-            <input type="submit" id="name" value="name">
+            <input type="submit" id="name" value="pokemon">
             <input type="submit" id="type" value="type">
         </form>
         <!-- revisit w03d02 DOM INPUT to see if this form can be better -->
