a little more styling done

--- a/monday/index.html
+++ b/monday/index.html
@@ -27,9 +27,11 @@
 
         <div class="team-div"> <!-- carousel -->
             <h2>MY TEAM</h2>
-            <div class="previous button"></div>
+            <div class="previous button">
+                <img src="greatball.png" alt="">
+            </div>
             <div class="myTeam"><!-- cards of pokemon in team --></div>
-            <div class="next button"></div>
+            <div class="next button"><img src="ultraball.png" alt=""></div>
         </div>
 
     </body>
