app is somewhat responsive

--- a/monday/index.html
+++ b/monday/index.html
@@ -28,10 +28,10 @@
         <div class="team-div"> <!-- carousel -->
             <h2>MY TEAM</h2>
             <div class="previous button">
-                <img src="greatball.png" alt="">
+                <img src="greatball.png" id ="previous" alt="">
             </div>
             <div class="myTeam"><!-- cards of pokemon in team --></div>
-            <div class="next button"><img src="ultraball.png" alt=""></div>
+            <div class="next button"><img src="ultraball.png" id="next" alt=""></div>
         </div>
 
     </body>
