--- a/monday/index.html
+++ b/monday/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <title>2.0</title>
+        <title>pokemon team</title>
         <script src="https://code.jquery.com/jquery-3.5.1.min.js" charset="utf-8"></script>
         <script src="app.js" charset="utf-8"></script>
         <link rel="stylesheet" href="style.css">
