--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <header>
-            <h1>BUILD YOUR pokemon TEAM</h1>
+            <h1>BUILD YOUR POKEMON TEAM</h1>
         </header>
         <form class="search-bar">
             <input type="text" id="search" placeholder="enter a name or type">
